:bug: scrollbar在预览时看不见

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -19,6 +19,7 @@ ul[class], ol[class] {
     border-radius: var(--scrollbar-border-radius);
     background-color: var(--scrollbar-background);
     transition: background-color var(--transition-duration-base);
+    border: var(--scrollbar-border-width) solid var(--scrollbar-border-color);
 }
 
 ::-webkit-scrollbar-thumb:hover {
